force-app/main/default/objects/SMS_DataArchive_History__c/SMS_DataArchive_History__c.object-meta.xml
<CustomObject>
    <label>SMS DataArchive History</label>
    <nameField>
        <displayFormat>DAH-{000000}</displayFormat>
        <label>SMS DataArchive History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS DataArchive History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>