force-app/main/default/objects/SMS_DataArchive_History__c/fields/Child_Records_Archived__c.field-meta.xml
<CustomField>
    <fullName>Child_Records_Archived__c</fullName>
    <label>Child Records Archived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>