force-app/main/default/objects/SMS_DataArchive_History__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Criteria</label>
    <referenceTo>SMS_DataArchive_FilterCriteria__c</referenceTo>
    <relationshipLabel>SMS DataArchive History</relationshipLabel>
    <relationshipName>SMS_DataArchive_History</relationshipName>
    <type>Lookup</type>
</CustomField>