force-app/main/default/objects/SMS_DataArchive_History__c/fields/Is_History_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Is_History_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is History Cleared</label>
    <type>Checkbox</type>
</CustomField>