force-app/main/default/objects/SMS_DataArchive_History__c/fields/Job_Ran_by__c.field-meta.xml
<CustomField>
    <fullName>Job_Ran_by__c</fullName>
    <label>Job Ran by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>