force-app/main/default/objects/SMS_DataArchive_History__c/fields/Parent_Records_Total__c.field-meta.xml
<CustomField>
    <fullName>Parent_Records_Total__c</fullName>
    <label>Parent Records Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>