force-app/main/default/objects/SMS_DataArchive_History__c/fields/RecordsArchived__c.field-meta.xml
<CustomField>
    <fullName>RecordsArchived__c</fullName>
    <label>RecordsArchived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>