force-app/main/default/objects/SMS_DataArchive_History__c/fields/RecordsFailed__c.field-meta.xml
<CustomField>
    <fullName>RecordsFailed__c</fullName>
    <label>RecordsFailed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>