force-app/main/default/objects/SMS_DataArchive_History__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>