force-app/main/default/objects/SMS_DataArchive_History__c/fields/Storage_Before_Archive__c.field-meta.xml
<CustomField>
    <fullName>Storage_Before_Archive__c</fullName>
    <label>Storage Before Archive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>