force-app/main/default/objects/SMS_DataArchive_History__c/fields/StorageReleased__c.field-meta.xml
<CustomField>
    <fullName>StorageReleased__c</fullName>
    <label>StorageReleased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>