force-app/main/default/objects/SMS_DataArchive_History__c/fields/Time_of_Run__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Run__c</fullName>
    <label>Time of Run</label>
    <type>DateTime</type>
</CustomField>