force-app/main/default/objects/SMS_DataArchive_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Record_Count__c</columns>
    <columns>RecordsArchived__c</columns>
    <columns>RecordsFailed__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <columns>Time_of_Run__c</columns>
    <columns>Job_Ran_by__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>